MoaiUtils/AntlrParser/Generated/CppParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CppParser.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace CppParser {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class CppParser : Parser {
	public const int
		Scope=1, LeftParen=2, RightParen=3, LeftBracket=4, RightBracket=5, LeftBrace=6, 
		RightBrace=7, Less=8, LessEqual=9, Greater=10, GreaterEqual=11, LeftShift=12, 
		RightShift=13, Plus=14, PlusPlus=15, Minus=16, MinusMinus=17, Star=18, 
		Div=19, Mod=20, And=21, Or=22, AndAnd=23, OrOr=24, Caret=25, Not=26, Tilde=27, 
		Question=28, Colon=29, Semi=30, Comma=31, Assign=32, StarAssign=33, DivAssign=34, 
		ModAssign=35, PlusAssign=36, MinusAssign=37, LeftShiftAssign=38, RightShiftAssign=39, 
		AndAssign=40, XorAssign=41, OrAssign=42, Equal=43, NotEqual=44, Arrow=45, 
		Dot=46, Ellipsis=47, Class=48, Struct=49, Union=50, Enum=51, TypeDef=52, 
		Template=53, TypeName=54, Namespace=55, Using=56, IntLiteral=57, FloatLiteral=58, 
		CharLiteral=59, StringLiteral=60, BoolLiteral=61, IntType=62, Modifier=63, 
		AccessSpecifier=64, Preproc=65, LineComment=66, BlockCommentStart=67, 
		DocBlockStart=68, Whitespace=69, ObjectiveCDirective=70, LinkageSpecification=71, 
		CommonMacro=72, Id=73, DocBlockEnd=74, LuaNameTag=75, TextTag=76, ConstTag=77, 
		FlagTag=78, AttributeTag=79, InParamTag=80, OptionalInParamTag=81, OutParamTag=82, 
		OverloadTag=83, UnknownTag=84, DocWord=85, DocWhitespace=86, BlockCommentEnd=87;
	public const int
		RULE_file = 0, RULE_topLevelStatement = 1, RULE_declaration = 2, RULE_typeDef = 3, 
		RULE_usingDirective = 4, RULE_functionDefinition = 5, RULE_classDefinition = 6, 
		RULE_baseClause = 7, RULE_constructorDefinition = 8, RULE_destructorDefinition = 9, 
		RULE_memberInitializerList = 10, RULE_memberInitializer = 11, RULE_declarator = 12, 
		RULE_type = 13, RULE_typeSpecifier = 14, RULE_templateParamsBlock = 15, 
		RULE_templateParam = 16, RULE_templateArgsBlock = 17, RULE_templateArg = 18, 
		RULE_nestedNameSpecifier = 19, RULE_bracesBlock = 20, RULE_bracketsBlock = 21, 
		RULE_parensBlock = 22, RULE_blockContent = 23, RULE_expression = 24, RULE_expressionWithoutAngleBrackets = 25, 
		RULE_classDocBlock = 26, RULE_functionDocBlock = 27, RULE_luaNameTagLine = 28, 
		RULE_textTagLine = 29, RULE_constTagLine = 30, RULE_flagTagLine = 31, 
		RULE_attributeTagLine = 32, RULE_overloadList = 33, RULE_overloadTagLine = 34, 
		RULE_overloadBlock = 35, RULE_inParamTagLine = 36, RULE_optionalInParamTagLine = 37, 
		RULE_outParamTagLine = 38;
	public static readonly string[] ruleNames = {
		"file", "topLevelStatement", "declaration", "typeDef", "usingDirective", 
		"functionDefinition", "classDefinition", "baseClause", "constructorDefinition", 
		"destructorDefinition", "memberInitializerList", "memberInitializer", 
		"declarator", "type", "typeSpecifier", "templateParamsBlock", "templateParam", 
		"templateArgsBlock", "templateArg", "nestedNameSpecifier", "bracesBlock", 
		"bracketsBlock", "parensBlock", "blockContent", "expression", "expressionWithoutAngleBrackets", 
		"classDocBlock", "functionDocBlock", "luaNameTagLine", "textTagLine", 
		"constTagLine", "flagTagLine", "attributeTagLine", "overloadList", "overloadTagLine", 
		"overloadBlock", "inParamTagLine", "optionalInParamTagLine", "outParamTagLine"
	};

	private static readonly string[] _LiteralNames = {
		null, "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", 
		"'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", 
		"'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", 
		"';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
		"'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", "'.'", "'...'", 
		"'class'", "'struct'", "'union'", "'enum'", "'typedef'", "'template'", 
		"'typename'", "'namespace'", "'using'", null, null, null, null, null, 
		null, null, null, null, null, "'/*'", "'/**'", null, null, null, null, 
		null, null, null, "'@text'", "'@const'", "'@flag'", "'@attr'", "'@in'", 
		"'@opt'", "'@out'", "'@overload'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Scope", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
		"AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow", "Dot", 
		"Ellipsis", "Class", "Struct", "Union", "Enum", "TypeDef", "Template", 
		"TypeName", "Namespace", "Using", "IntLiteral", "FloatLiteral", "CharLiteral", 
		"StringLiteral", "BoolLiteral", "IntType", "Modifier", "AccessSpecifier", 
		"Preproc", "LineComment", "BlockCommentStart", "DocBlockStart", "Whitespace", 
		"ObjectiveCDirective", "LinkageSpecification", "CommonMacro", "Id", "DocBlockEnd", 
		"LuaNameTag", "TextTag", "ConstTag", "FlagTag", "AttributeTag", "InParamTag", 
		"OptionalInParamTag", "OutParamTag", "OverloadTag", "UnknownTag", "DocWord", 
		"DocWhitespace", "BlockCommentEnd"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CppParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CppParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CppParser.Eof, 0); }
		public TopLevelStatementContext[] topLevelStatement() {
			return GetRuleContexts<TopLevelStatementContext>();
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return GetRuleContext<TopLevelStatementContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==DocBlockStart || _la==Id) {
				{
				{
				State = 78; topLevelStatement();
				}
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 84; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelStatementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public TypeDefContext typeDef() {
			return GetRuleContext<TypeDefContext>(0);
		}
		public UsingDirectiveContext usingDirective() {
			return GetRuleContext<UsingDirectiveContext>(0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return GetRuleContext<FunctionDefinitionContext>(0);
		}
		public ClassDefinitionContext classDefinition() {
			return GetRuleContext<ClassDefinitionContext>(0);
		}
		public ConstructorDefinitionContext constructorDefinition() {
			return GetRuleContext<ConstructorDefinitionContext>(0);
		}
		public DestructorDefinitionContext destructorDefinition() {
			return GetRuleContext<DestructorDefinitionContext>(0);
		}
		public TopLevelStatementContext[] topLevelStatement() {
			return GetRuleContexts<TopLevelStatementContext>();
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return GetRuleContext<TopLevelStatementContext>(i);
		}
		public ITerminalNode Namespace() { return GetToken(CppParser.Namespace, 0); }
		public ITerminalNode Id() { return GetToken(CppParser.Id, 0); }
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterTopLevelStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitTopLevelStatement(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelStatementContext topLevelStatement() {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelStatement);
		int _la;
		try {
			State = 114;
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 86; declaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; typeDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88; usingDirective();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 89; functionDefinition();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 90; classDefinition();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 91; constructorDefinition();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 92; destructorDefinition();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 93; Match(LeftBrace);
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==DocBlockStart || _la==Id) {
					{
					{
					State = 94; topLevelStatement();
					}
					}
					State = 99;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 100; Match(RightBrace);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 101; Match(Namespace);
				State = 103;
				_la = TokenStream.La(1);
				if (_la==Id) {
					{
					State = 102; Match(Id);
					}
				}

				State = 105; Match(LeftBrace);
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==DocBlockStart || _la==Id) {
					{
					{
					State = 106; topLevelStatement();
					}
					}
					State = 111;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 112; Match(RightBrace);
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 113; Match(Semi);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public DeclaratorContext declarator() {
			return GetRuleContext<DeclaratorContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 116; Match(Template);
				State = 117; templateParamsBlock();
				}
			}

			State = 125;
			switch (TokenStream.La(1)) {
			case Scope:
			case IntType:
			case Id:
				{
				State = 120; typeSpecifier();
				}
				break;
			case Class:
				{
				State = 121; Match(Class);
				}
				break;
			case Struct:
				{
				State = 122; Match(Struct);
				}
				break;
			case Union:
				{
				State = 123; Match(Union);
				}
				break;
			case Enum:
				{
				State = 124; Match(Enum);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 127; declarator(0);
			State = 130;
			_la = TokenStream.La(1);
			if (_la==Assign) {
				{
				State = 128; Match(Assign);
				State = 129; expression();
				}
			}

			State = 132; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterTypeDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitTypeDef(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefContext typeDef() {
		TypeDefContext _localctx = new TypeDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; Match(TypeDef);
			State = 136;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) {
				{
				State = 135;
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				}
			}

			State = 138; type();
			State = 139; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDirectiveContext : ParserRuleContext {
		public UsingDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDirective; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterUsingDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitUsingDirective(this);
		}
	}

	[RuleVersion(0)]
	public UsingDirectiveContext usingDirective() {
		UsingDirectiveContext _localctx = new UsingDirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_usingDirective);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 141; Match(Using);
			State = 142; Match(Namespace);
			State = 146;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 143;
					MatchWildcard();
					}
					} 
				}
				State = 148;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 149; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDefinitionContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public FunctionDocBlockContext functionDocBlock() {
			return GetRuleContext<FunctionDocBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterFunctionDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitFunctionDefinition(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDefinitionContext functionDefinition() {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152;
			_la = TokenStream.La(1);
			if (_la==DocBlockStart) {
				{
				State = 151; functionDocBlock();
				}
			}

			State = 156;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 154; Match(Template);
				State = 155; templateParamsBlock();
				}
			}

			State = 158; type();
			State = 159; bracesBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefinitionContext : ParserRuleContext {
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public ClassDocBlockContext classDocBlock() {
			return GetRuleContext<ClassDocBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Id() { return GetToken(CppParser.Id, 0); }
		public BaseClauseContext baseClause() {
			return GetRuleContext<BaseClauseContext>(0);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterClassDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitClassDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefinitionContext classDefinition() {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(Context, State);
		EnterRule(_localctx, 12, RULE_classDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162;
			_la = TokenStream.La(1);
			if (_la==DocBlockStart) {
				{
				State = 161; classDocBlock();
				}
			}

			State = 165;
			_la = TokenStream.La(1);
			if (_la==TypeDef) {
				{
				State = 164; Match(TypeDef);
				}
			}

			State = 169;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 167; Match(Template);
				State = 168; templateParamsBlock();
				}
			}

			State = 171;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			State = 176;
			_la = TokenStream.La(1);
			if (_la==Scope || _la==IntType || _la==Id) {
				{
				State = 172; typeSpecifier();
				State = 174;
				_la = TokenStream.La(1);
				if (_la==Colon) {
					{
					State = 173; baseClause();
					}
				}

				}
			}

			State = 178; bracesBlock();
			State = 180;
			_la = TokenStream.La(1);
			if (_la==Id) {
				{
				State = 179; Match(Id);
				}
			}

			State = 182; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseClauseContext : ParserRuleContext {
		public TypeSpecifierContext[] typeSpecifier() {
			return GetRuleContexts<TypeSpecifierContext>();
		}
		public TypeSpecifierContext typeSpecifier(int i) {
			return GetRuleContext<TypeSpecifierContext>(i);
		}
		public BaseClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterBaseClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitBaseClause(this);
		}
	}

	[RuleVersion(0)]
	public BaseClauseContext baseClause() {
		BaseClauseContext _localctx = new BaseClauseContext(Context, State);
		EnterRule(_localctx, 14, RULE_baseClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184; Match(Colon);
			State = 185; typeSpecifier();
			State = 190;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==Comma) {
				{
				{
				State = 186; Match(Comma);
				State = 187; typeSpecifier();
				}
				}
				State = 192;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstructorDefinitionContext : ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Id() { return GetToken(CppParser.Id, 0); }
		public ParensBlockContext parensBlock() {
			return GetRuleContext<ParensBlockContext>(0);
		}
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public MemberInitializerListContext memberInitializerList() {
			return GetRuleContext<MemberInitializerListContext>(0);
		}
		public ConstructorDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constructorDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.EnterConstructorDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICppParserListener typedListener = listener as ICppParserListener;
			if (typedListener != null) typedListener.ExitConstructorDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ConstructorDefinitionContext constructorDefinition() {
		ConstructorDefinitionContext _localctx = new ConstructorDefinitionContext(Context, State);
		EnterRule(_localctx, 16, RULE_constructorDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 195;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 193; Match(Template);
				State = 194; templateParamsBlock();
				}
			}

			State = 197; typeSpecifier();
			State = 198; Match(Scope);
			State = 199; Match(Id);
			State = 200; parensBlock();
			State = 202;
			_la = TokenStream.La(1);
			if (_la==Colon) {
				{
				State = 201; memberInitializerList();
				}
			}

			State = 204; bracesBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
